--- a/css/style.css
+++ b/css/style.css
@@ -907,7 +907,7 @@ p {
   padding-top: 30px !important;
   color: #fff;
 }
-#fh5co-events .fh5co-heading .heading:before, #fh5co-events .fh5co-heading .heading::before {
+/*#fh5co-events .fh5co-heading .heading:before, #fh5co-events .fh5co-heading .heading::before {
   height: 64px;
   width: 49px;
   position: absolute;
@@ -917,7 +917,7 @@ p {
   left: 50%;
   margin-top: -50px;
   margin-left: -24px;
-}
+}*/
 #fh5co-events .fh5co-heading .sub-heading {
   color: #a99c92;
 }
